# RemoteArm

./: LICENSE  README.md
client/: README.md  client.md
client/client-3DController/: .gitignore  CMakeLists.txt  Main.qml  README.md  armadapter.cpp  armadapter.h  assets.qrc  main.cpp
client/client-3DController/balsam/: RoboticArm.qml  RoboticArm2.qml
client/client-3DController/balsam/Blender 3D Model Example/: RoboticArm.blend  RoboticArm.blend1  RoboticArm.fbx  RoboticArm.glb  RoboticArm4.fbx
client/client-3DController/balsam/meshes/: plane_mesh.mesh
client/client-3DController/qml/: Main.qml  OriginGizmo.qml
client/client-3DController/qrc/: assets.qrc
client/client-3DController/qrc/mesh/: defaultMaterial_material11.mesh
client/client-3DController/src/: armadapter.cpp  brazovirtual.cpp  brazovirtual.h  commanddispatcher.cpp  commanddispatcher.h  commandprocessor.cpp  commandprocessor.h  commandprocessorqt.cpp  commandprocessorqt.h  esp32actuator.h  parser.cpp  parser.h  parservalidate.cpp  parservalidate.h
client/client-debug/: .gitignore  README.md  conanfile.txt  meson.build  setup.bat
client/client-debug/conan-profile/: gcc-ccache
client/client-debug/src/: main.cpp
docs/: README.md
firmware/: README.md
firmware/Arduino ESP32 server/sketch_serverEsp/: sketch_serverEsp.ino
firmware/Arduino ESP32 server/sketch_serverEsp/src/: brazovirtual.cpp  brazovirtual.h  commanddispatcher.cpp  commanddispatcher.h  commandprocessor.cpp  commandprocessor.h  esp32actuator.cpp  parser.cpp  parservalidate.cpp  parservalidate.h
interface/: README.md
protocol/: README.md  protocol.md
server/: .gitignore
server/server-debug-pc/: README.md  conanfile.txt  meson.build
server/server-debug-pc/src/: main.cpp
server/src/: main.cpp
